<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/padding_small">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <Button
                android:id="@+id/btnShowIgnoreDialog"
                style="@style/buttonTintAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_ignore_add_number"/>

            <include layout="@layout/separator_line"/>

            <com.ae.apps.common.views.EmptyRecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/ignore_list_item"/>

            <RelativeLayout
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:drawablePadding="@dimen/padding_medium"
                    android:drawableTop="@drawable/nav_icon_ignore"
                    android:gravity="center"
                    android:text="@string/str_ignore_empty_list"
                    android:textSize="@dimen/card_title"/>
            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>