<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_counter"
        android:icon="@drawable/nav_icon_email"
        android:title="@string/title_counter"/>
    <item
        android:id="@+id/menu_ignore"
        android:icon="@drawable/nav_icon_ignore"
        android:title="@string/title_ignore"/>
    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/nav_icon_list_bulleted"
        android:title="@string/title_sent_list"/>
    <item
        android:id="@+id/menu_chart"
        android:icon="@drawable/nav_icon_chart_pie"
        android:title="@string/title_chart"/>
</menu>